Rota para criar usuario criada, pedente validar usuarios duplicados

--- a/views/criar_login.handlebars
+++ b/views/criar_login.handlebars
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Realizar cadastro</h1>
-    
+    <form action="/validar_cadastro" method="post">
+        <input type="text" name="nome" >Insira seu nome <br>
+        <input type="text" name="senha" >Insira sua senha <br>
+        <input type="text" name="CPF" >Insira seu CPF
+        <button>Enviar</button>
+    </form>
 </body>
 </html>
