--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,18 +7,38 @@
 </head>
 <body>
     <h1>Registrar ou Logar</h1>
-    <div>
-        <form action="/verifica" method="POST">
-            <input type="text" name="nome">Nome <br>
+    {{!-- <div>
+        <form >
+            <input type="text" >Nome <br>
             <p></p>
             <input type="text" name="senha">Senha <br>
             <p></p>
             <button>Logar</button>
-            <a href="/cadastrar">Registrar</a>
-            
-            
+            <a href="/cadastrar"></a>
         </form>
+    </div> --}}
+
+    <form action="/verifica" method="POST"> 
+    <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Name</label>
+        <input type="text" class="form-control" id="exampleInputEmail1"  name="nome">
+        
     </div>
+    <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" name="senha">
+    </div>
+    {{!-- <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1" >
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div> --}}
+    <button type="submit" class="btn btn-primary">Logar</button>
+    
+    <a href="/cadastrar"><class="btn btn-primary">Register</a>
+</form>
+
+
+    
     
 </body>
 </html>
