Ajustado rota de aque, pendente mensagens flash

--- a/views/depositar.handlebars
+++ b/views/depositar.handlebars
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/depositar.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Area para deposito</h1>
-    {{!-- <form >
-    <label>
-        
-        <input type="number" name="inserir">Insira o valor que deseja depositar<br>
-        
-    </label>
-    </form> --}}
+    <h1 class="titulo">Area para deposito</h1>
+    
 
+
+    
     <form  action="/inserir_nota" method="POST"> 
     <div class="mb-3">
         <label class="form-label">Insira o valor que deseja depositar</label>
