--- a/views/payament.handlebars
+++ b/views/payament.handlebars
@@ -14,7 +14,7 @@
                 <input type="number" class="form-control"  name="pagar">
 
                 <label class="form-label">Insira a descrição do pagamento (opcional)</label>
-                <input type="number" class="form-control"  name="descrever">
+                <input type="text" class="form-control"  name="descrever">
 
                 <button class="btn btn-primary">Confirmar</button>
                 <a href="/principal" class="btn btn-primary">Retornar area inicial</a>
